# Qt_infotainment

./: CMakeLists.txt  Main.qml  README.md  main.cpp
optionscontroller/: hvachandler.cpp  hvachandler.h  system.cpp  system.h
ui/BottomBar/: AudioBox.qml  BottomBar.qml
ui/LeftScreen/: calendar.qml
ui/RightScreen/: AudioBox.qml  Contactpage.qml  MapNavigation.qml  RightScreen.qml  TextButton.qml
